test/compilable/test15086.d
/*
PERMUTE_ARGS:
TEST_OUTPUT:
---
compilable/test15086.d(8): Deprecation: module `foo` from file compilable/imports/a15086.d must be imported with 'import foo;'
---
*/
import imports.a15086;
